--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,10 @@
 vendor/
-node_modules/
-npm-debug.log
+.DS_Store
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
+\.codelite/
 
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-storage/*.key
-.env.*.php
-.env.php
-.env
-Homestead.yaml
-Homestead.json
+*.phprj
 
-# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
-.rocketeer/
+*.workspace
+
+build/coverage/
